--- a/DOM/index.html
+++ b/DOM/index.html
@@ -57,5 +57,14 @@
       <p>Le ciel est bleu.</p>
       <p>Attrapez-les tous : les digimons !</p>
     </div>
+
+    <div>===================================</div>
+
+    <div class="tuer-le-chat">
+      <h3>Tuer le chat !</h3>
+      <p>Force de l'utilisateur : </p>
+      <p>Vie du chat : </p>
+      <img source="~/Formation Dev Web/JavaScript/DOM/assets/chaton.png" alt="chaton">
+    </div>
   </body>
 </html>
