--- a/DOM/index.html
+++ b/DOM/index.html
@@ -62,9 +62,11 @@
 
     <div class="tuer-le-chat">
       <h3>Tuer le chat !</h3>
-      <p>Force de l'utilisateur : </p>
-      <p>Vie du chat : </p>
-      <img source="~/Formation Dev Web/JavaScript/DOM/assets/chaton.png" alt="chaton">
+      <p class="display-user-power">Force de l'utilisateur : </p>
+      <div style="text-align: center">
+        <p class="display-cat-life">Vie du chat : </p>
+        <input class="fight-cat" type="image" src="assets/chaton.png" alt="chaton" />
+      </div>
     </div>
   </body>
 </html>
