--- a/DOM/todolist/index.html
+++ b/DOM/todolist/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script defer src="./assets/script/script.js"></script>
     <title>To Do List</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Ma super To Do List</h1>
+    <label>Texte de ma To Do</label>
+    <div>
+    <input type="texte" class="texte-todo" />
+    </div>
+    <div>
+      <input class="ajouter-todo" type="button" value="Ajouter un To Do" />
+      <input class="supprimer-tout" type="button" value="Supprimer tous les To Do" />
+    </div>
+    <h2>Mes To Do</h2>
+    <ul class="mes-todo">
+        
+    </ul>
+  </body>
 </html>
