--- a/DOM/todolist/index.html
+++ b/DOM/todolist/index.html
@@ -10,7 +10,7 @@
     <h1>Ma super To Do List</h1>
     <label>Texte de ma To Do</label>
     <div>
-    <input type="texte" class="texte-todo" />
+    <input type="text" class="texte-todo" />
     </div>
     <div>
       <input class="ajouter-todo" type="button" value="Ajouter un To Do" />
