--- a/DOM/todolist/index.html
+++ b/DOM/todolist/index.html
@@ -13,7 +13,7 @@
     <div>
     <input type="text" class="texte-todo" />
     </div>
-    <div>
+    <div class="buttons">
       <input class="ajouter-todo" type="button" value="Ajouter un To Do" />
       <input class="supprimer-tout" type="button" value="Supprimer tous les To Do" />
     </div>
