--- a/DOM/formulaire/index.html
+++ b/DOM/formulaire/index.html
@@ -21,9 +21,9 @@
             <label>Age</label>
             <input type="number" class="age" />
             <label>Sexe</label>
-            <input type="radio" class="homme" name="sexe" />
+            <input type="radio" class="genre" name="sexe" value="homme" />
             <label for="homme">Homme</label>
-            <input type="radio" class="femme" name="sexe" />
+            <input type="radio" class="genre" name="sexe" value="femme" />
             <label for="femme">Femme</label>
           </div>
           <div>
