--- a/DOM/formulaire/index.html
+++ b/DOM/formulaire/index.html
@@ -21,20 +21,20 @@
             <label>Age</label>
             <input type="number" class="age" />
             <label>Sexe</label>
-            <input type="radio" class="genre" name="sexe" value="homme" />
+            <input type="radio" class="genre" name="sexe" value="Homme" />
             <label for="homme">Homme</label>
-            <input type="radio" class="genre" name="sexe" value="femme" />
+            <input type="radio" class="genre" name="sexe" value="Femme" />
             <label for="femme">Femme</label>
           </div>
           <div>
             <label name="select-profession">Profession</label>
             <select name="profession" class="select-profession">
               <option value="">-- Sélectionner --</option>
-              <option value="etudiant">Etudiant(e)</option>
-              <option value="developpeur">Développeur(se)</option>
-              <option value="enseignant">Enseignant(e)</option>
-              <option value="designer">Designer</option>
-              <option value="autre">Autre</option>
+              <option value="Étudiant(e)">Étudiant(e)</option>
+              <option value="Développeur(se)">Développeur(se)</option>
+              <option value="Enseignant(e)">Enseignant(e)</option>
+              <option value="Designer">Designer</option>
+              <option value="Autre">Autre</option>
             </select>
             <label name="select-region">Région</label>
             <select name="region" class="select-region">
