--- a/DOM/formulaire/index.html
+++ b/DOM/formulaire/index.html
@@ -39,24 +39,24 @@
             <label name="select-region">Région</label>
             <select name="region" class="select-region">
               <option value="">-- Sélectionner --</option>
-              <option value="ile-de-france">Île-de-France</option>
-              <option value="paca">Provence-Alpes-Côte d’Azur</option>
-              <option value="bretagne">Bretagne</option>
-              <option value="grand-est">Grand Est</option>
-              <option value="aura">Auvergne-Rhône-Alpes</option>
+              <option value="Île-de-France">Île-de-France</option>
+              <option value="Provence-Alpes-Côte d'Azur">Provence-Alpes-Côte d'Azur</option>
+              <option value="Bretagne">Bretagne</option>
+              <option value="Grand Est">Grand Est</option>
+              <option value="Auvergne-Rhône-Alpes">Auvergne-Rhône-Alpes</option>
             </select>
           </div>
           <div>
             <label>Hobbies</label>
-            <input type="checkbox" class="lecture" />
+            <input type="checkbox" class="hobbies" value="Lecture" />
             <label for="lecture">Lecture</label>
-            <input type="checkbox" class="sport" />
+            <input type="checkbox" class="hobbies" value="Sport" />
             <label for="sport">Sport</label>
-            <input type="checkbox" class="jeux-video" />
+            <input type="checkbox" class="hobbies" value="Jeux vidéo" />
             <label for="jeux-video">Jeux vidéo</label>
-            <input type="checkbox" class="musique" />
+            <input type="checkbox" class="hobbies" value="Musique" />
             <label for="musique">Musique</label>
-            <input type="checkbox" class="voyage" />
+            <input type="checkbox" class="hobbies" value="Voyage" />
             <label for="voyage">Voyage</label>
           </div>
           <div>
