--- a/DOM/formulaire/index.html
+++ b/DOM/formulaire/index.html
@@ -61,7 +61,7 @@
           </div>
           <div>
             <label>Lien LinkedIn</label>
-            <input type="text" />
+            <input type="text" class="linkedin" />
           </div>
           <div>
             <input class="valider" type="submit" value="Valider" />
