--- a/DOM/formulaire/index.html
+++ b/DOM/formulaire/index.html
@@ -13,9 +13,9 @@
         <form class="formulaire-profil">
           <div>
             <label>Nom</label>
-            <input type="text" class="nom" />
+            <input type="text" class="nom" required />
             <label>Prénom</label>
-            <input type="text" class="prenom" />
+            <input type="text" class="prenom" required />
           </div>
           <div>
             <label>Age</label>
