--- a/DOM/duel de sorciers/index.html
+++ b/DOM/duel de sorciers/index.html
@@ -37,7 +37,9 @@
         </div>
       </form>
       <section>
-        
+        <div class="players-status">
+            
+        </div>
       </section>
     </main>
   </body>
