--- a/DOM/duel de sorciers/index.html
+++ b/DOM/duel de sorciers/index.html
@@ -37,9 +37,8 @@
         </div>
       </form>
       <section>
-        <div class="players-status">
-            
-        </div>
+        <div class="players-status"></div>
+        <div class="battle-status"></div>
       </section>
     </main>
   </body>
