--- a/DOM/duel de sorciers/index.html
+++ b/DOM/duel de sorciers/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <script defer src="./assets/script/script.js"></script>
     <title>Duel de Sorciers</title>
   </head>
@@ -10,7 +11,7 @@
     <main>
       <form class="formulaire-sorciers">
         <h1>Duel de Sorciers</h1>
-        <div>
+        <div class="form-style">
           <label>Nom du sorcier 1</label>
           <input type="text" class="nom-sorcier-1" required />
           <label>Maison du sorcier 1</label>
@@ -21,7 +22,7 @@
             <option value="Poufsouffle">Poufsouffle</option>
           </select>
         </div>
-        <div>
+        <div class="form-style">
           <label>Nom du sorcier 2</label>
           <input type="text" class="nom-sorcier-2" required />
           <label>Maison du sorcier 2</label>
