--- a/DOM/adopte ton animal/index.html
+++ b/DOM/adopte ton animal/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./assets/script/script.js"></script>
+    <script defer src="./assets/script/script.js"></script>
     <title>Adopte ton animal</title>
   </head>
   <body>
@@ -27,5 +27,6 @@
         <input class="relacher" type="button" value="Relâcher">
       </div>
     </form>
+    <div class="display-animals"></div>
   </body>
 </html>
