--- a/DOM/cocktails api/index.html
+++ b/DOM/cocktails api/index.html
@@ -20,6 +20,11 @@
         class="cocktail-aleatoire"
         value="Cocktail aléatoire"
       />
+      <input
+        type="button"
+        class="effacer-resultats"
+        value="Effacer les résultats"
+      />
       <div class="afficher-cocktails"></div>
     </form>
   </body>
