--- a/DOM/cocktails api/index.html
+++ b/DOM/cocktails api/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script defer src="./assets/script/script.js"></script>
     <title>Cocktails API</title>
   </head>
@@ -25,7 +26,7 @@
         class="effacer-resultats"
         value="Effacer les résultats"
       />
-      <div class="afficher-cocktails"></div>
     </form>
+    <div class="afficher-cocktails"></div>
   </body>
 </html>
